Couldn't help myself. Fixed nav alignment.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -52,6 +52,7 @@ body > nav ul li {
 body > nav ul a {
   display: block;
   font-size: 24px;
+  margin-top: 0.16em;
 }
 
 #ordering {
